# vision-zero-assortment

./: README.md
massmailer/: README.rst  pyproject.toml
massmailer/massmailer/: masssend.py  our_congress_avenue.txt  renderer.py
massmailer/tests/: test_massmailer.py
scrapers/: README.rst  pyproject.toml
scrapers/scrapers/: amplify.py  coc.py  ibuyaustin.py
scrapers/scrapers/core/: aiohelper.py  container.py
scrapers/tests/: test_scrapers.py
