[tool.poetry]
name = "massmailer"
version = "0.1.0"
description = ""
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.1"
yagmail = "^0.11.224"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bpython = "^0.18"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
