[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = ""
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
tenacity = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
bpython = "^0.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
